# EfficientTutor-backend

./: .envrc  .geminiignore  .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.agent/context/: api.md  db.md  global.md  svc.md  test.md
.agent/prompt/: api-init  api-init2  common-sync  db-init  db-init2  db-sync  svc-init  svc-init2  svc-sync  test-init  test-init2
docs/: CODE_DEPLOYMENT_PLAN.md  DB_DEPLOYMENT_CYCLE.md  TEST_DB_CYCLE.md
scripts/: check_integrity.py  generate_pg_enums.py  generate_test_data.py  reset_test_db.sh  rollback_production.sh  run_migrations.py  update_passwords.py
scripts/v0.3_migration/: DEPLOYMENT_v0.3.md  backend_deployment_plan.md  check_integrity.py  fix_tuition_ids.py  run_migrations.py  synthesize_timetable.py  update_passwords.py
scripts/v0.4_migration/: run_migrations.py
src/efficient_tutor_backend/: __init__.py  main.py  tmp2
tests/: TEST_DB_README.md  conftest.py  constants.py  host_backend.py  host_backend2.py  reset_test_db.sh  test_app.py
tests/api/: test_admin.py  test_auth.py  test_financial_summaries.py  test_notes.py  test_parent.py  test_payment_log.py  test_student.py  test_teacher.py  test_timetable.py  test_tuition.py  test_tuition_log.py  test_user.py
tests/backend/: test_app.py  test_payment_logs_endpoints.py  test_tuition_logs_endpoints.py  test_tuitions_endpoints.py  test_user_endpoints.py
tests/core/: test_finance.py  test_timetable.py  test_tuitions.py  test_users.py
tests/database/: TEST_DB_README.md  factories.py  generate_test_data.py  reset_test_db.sh  seed_test_db.py  test_db_handler.py
tests/services/: test_admin_service.py  test_finance_summary_service.py  test_geo_service.py  test_notes_service.py  test_parent_service.py  test_payment_log_service.py  test_student_service.py  test_teacher_service.py  test_timetable_service.py  test_tuition_log_service.py  test_user_service.py  (+1 more)
(+85 files in other folders)
